--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,26 @@
 {
-    "name": "PayPysBurguer PWA",
-    "short_name": "PaypysBurguer",
-    "icons": [
-      {
-        "src": "assets/img/logo.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ],
-    "start_url": "/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/",
-    "scope": "/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/",
-    "display": "standalone",
-    "background_color": "#3c444c",
-    "theme_color": "#443c44",
-    "orientation": "portrait",
-    "categories": ["shopping", "business"]
-  }
+  "name": "Paypy's Burguer",
+  "short_name": "PaypysBurguer",
+  "description": "Las mejores hamburguesas - Paypy's Burguer",
+  "icons": [
+    {
+      "src": "assets/img/logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/img/logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "start_url": "/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/",
+  "scope": "/ItsRaven-13.github.io-PWA_PAYPYSBURGUER/",
+  "display": "standalone",
+  "background_color": "#F8FE01",
+  "theme_color": "#000000",
+  "orientation": "portrait",
+  "categories": ["food", "shopping", "business"],
+  "lang": "es"
+}
