--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
   "description": "Las mejores hamburguesas - Paypy's Burguer",
   "icons": [
     {
-      "src": "assets/img/logo.png",
+      "src": "/PWA_PAYPYSBURGUER/assets/img/logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "assets/img/logo.png",
+      "src": "/PWA_PAYPYSBURGUER/assets/img/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     }
