--- a/manifest.json
+++ b/manifest.json
@@ -4,15 +4,10 @@
   "description": "Las mejores hamburguesas - Paypy's Burguer",
   "icons": [
     {
-      "src": "/PWA_PAYPYSBURGUER/assets/img/logo.png",
-      "sizes": "512x560",
+      "src": "/PWA_PAYPYSBURGUER/assets/img/icon.png",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
-    },
-    {
-      "src": "/PWA_PAYPYSBURGUER/assets/img/logo.png",
-      "sizes": "192x192",
-      "type": "image/png"
     }
   ],
   "start_url": "/PWA_PAYPYSBURGUER/",
@@ -22,12 +17,5 @@
   "theme_color": "#000000",
   "orientation": "portrait",
   "categories": ["food", "shopping", "business"],
-  "lang": "es",
-  "screenshots": [
-    {
-      "src": "/PWA_PAYPYSBURGUER/assets/img/logo.png",
-      "sizes": "512x560",
-      "type": "image/png"
-    }
-  ]
+  "lang": "es"
 }
